--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "prismjs": "^1.17.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-embed-gist": "^1.0.11",
+    "super-react-gist": "^1.0.4",
     "uuid": "^8.1.0"
   },
   "devDependencies": {
