--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@zeit/react-jsx-parser": "^2.0.0",
     "async-sema": "^3.1.0",
+    "enzyme": "^3.0.0",
     "enzyme-adapter-react-16": "1.15.6",
     "github-slugger": "^1.2.1",
     "katex": "^0.12.0",
@@ -24,6 +25,7 @@
     "react": "16.14.0",
     "react-dom": "16.12.0",
     "react-twitter-embed": "^3.0.3",
+    "react-youtube": "^7.13.1",
     "super-react-gist": "^1.0.4",
     "uuid": "^8.1.0"
   },
