--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prop-types": "^15.5.4",
     "react": "16.14.0",
     "react-dom": "16.12.0",
+    "react-iframe": "^1.8.0",
     "react-twitter-embed": "^3.0.3",
     "react-youtube": "^7.13.1",
     "super-react-gist": "^1.0.4",
