--- a/package.json
+++ b/package.json
@@ -20,23 +20,23 @@
     "github-slugger": "^1.2.1",
     "katex": "^0.12.0",
     "next": "10.0.7",
-    "prismjs": "^1.17.1",
+    "prismjs": "1.23.0",
     "prop-types": "^15.5.4",
-    "react": "16.14.0",
-    "react-dom": "16.12.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-iframe": "^1.8.0",
     "react-twitter-embed": "^3.0.3",
     "react-youtube": "^7.13.1",
     "super-react-gist": "^1.0.4",
-    "uuid": "^8.1.0"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/katex": "^0.11.0",
-    "@types/node": "^14.14.27",
+    "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
-    "husky": "^3.1.0",
-    "lint-staged": "^9.5.0",
-    "prettier": "^1.19.1",
-    "typescript": "^4.1.5"
+    "husky": "^5.1.0",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
+    "typescript": "^4.2.2"
   }
 }
