--- a/package.json
+++ b/package.json
@@ -13,21 +13,32 @@
     }
   },
   "dependencies": {
+    "@github/details-dialog-element": "^3.1.2",
+    "@mapbox/rehype-prism": "^0.5.0",
+    "@vercel/fetch": "^6.1.0",
     "@zeit/react-jsx-parser": "^2.0.0",
     "async-sema": "^3.1.0",
+    "date-fns": "^2.18.0",
     "enzyme": "^3.0.0",
     "enzyme-adapter-react-16": "1.15.6",
     "github-slugger": "^1.2.1",
     "katex": "^0.12.0",
+    "mdast-util-to-string": "^2.0.0",
     "next": "10.0.7",
     "prismjs": "1.23.0",
     "prop-types": "^15.5.4",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
     "react-iframe": "^1.8.0",
     "react-twitter-embed": "^3.0.3",
     "react-youtube": "^7.13.1",
+    "rehype-parse": "^7.0.1",
+    "rehype-raw": "^5.0.0",
+    "rehype-sanitize": "^4.0.0",
+    "remark-parse": "^9.0.0",
+    "remark-rehype": "^8.0.0",
     "super-react-gist": "^1.0.4",
+    "unified": "^9.2.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
