--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "headers":[
         {
           "key" : "Cache-Control",
-          "value" : "public, max-age=7200, s-max-age=7200, stale-while-revalidate"
+          "value" : "public, max-age=7200, s-max-age=7200, stale-while-revalidate=86400"
         }
       ]
     },
@@ -14,7 +14,7 @@
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "public, s-max-age=3600, stale-while-revalidate"
+          "value": "public, max-age=1, s-max-age=1, stale-while-revalidate=86400"
         }
       ]
     }
