--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "headers":[
         {
           "key" : "Cache-Control",
-          "value" : "public, max-age=7200, s-max-age=7200, stale-while-revalidate=3153600"
+          "value" : "public, max-age=3153600, s-max-age=3153600, stale-while-revalidate=3153600"
         }
       ]
     },
@@ -16,6 +16,24 @@
           "key": "Cache-Control",
           "value": "public, max-age=86400, s-max-age=86400, stale-while-revalidate=3153600"
         }
+      ]
+    },
+    {
+      "source": "/blog",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=120, s-max-age=120, stale-while-revalidate=3153600"
+        }        
+      ]
+    },
+    {
+      "source": "/blog/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=3600, s-max-age=3600, stale-while-revalidate=3153600"
+        }        
       ]
     }
   ]
